--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,22 @@
     background: repeat;
 }
 
+pre{
+
+    background: none;
+    border: none;
+    padding: 15px;
+}
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 20px;
+  background: #3f3f3f;
+  color: #dcdcdc;
+  -webkit-text-size-adjust: none;
+}
+
 h1{
 
 	font-family: 'Bitter', serif;
