--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -45,10 +45,16 @@ p{
 
 }
 
+.bigh1{
+
+	color: red !important;
+}
+
 small{
 
-	font-family: 'Roboto','serif';
-	font-size: 15px;
+	font-family: 'Roboto','serif' !important;
+	font-size: 15px !important;
+	color: gray;
 }
 
 .centered{
@@ -70,6 +76,7 @@ small{
 .jumbotron > h1{
 
 	margin-top: 60px;
+	color: red;
 	font-family: 'Fjalla One';
 	color: red;
 
